# FFmpegPlayer

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/netatmo/ylu/ffmpegplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  AudioPushChannel.cpp  AudioPushChannel.h  BaseChannel.h  BasePushChannel.cpp  BasePushChannel.h  FFmpegCore.cpp  FFmpegCore.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  VideoPushChannel.cpp  VideoPushChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/netatmo/ylu/ffmpegplayer/: AudioChannel.kt  CameraHelper.java  FFmpegPlayer.java  FileSearch.java  MainActivity.kt  PushManager.java  VideoChannel.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/netatmo/ylu/ffmpegplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
